# modular

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/core/: ctx.rs  err.rs  ffi.rs  mod.rs  module.rs  registry.rs
example/: Cargo.toml
example/module1/: Cargo.toml
example/module1/src/: lib.rs
example/module2/: Cargo.toml
example/module2/src/: lib.rs
example/src/: main.rs
modular/: Cargo.toml
modular-core/: Cargo.toml
modular-core/src/: callback.rs  lib.rs  module.rs  registry.rs
modular-dll/: Cargo.toml
modular-dll/src/: lib.rs
modular-native/: Cargo.toml
modular-native/src/: errors.rs  lib.rs  modular.rs  native_byte_slice.rs  types.rs
modular-tracing/modular-tracing-core/: Cargo.toml
modular-tracing/modular-tracing-core/src/: lib.rs
modular-tracing/native-recorder/: Cargo.toml
modular-tracing/native-recorder/src/: lib.rs
modular-tracing/protobuf-tracing/: Cargo.toml
modular-tracing/protobuf-tracing/src/: interest.rs  layer.rs  lib.rs  recorder.rs  span_fields.rs  types.rs
modular-wasm/: Cargo.toml
modular-wasm/src/: lib.rs  main.rs  module.rs  registry_imports.rs  state.rs  utils.rs  vtable.rs
modular-wasm/wasm-example/: Cargo.toml
modular-wasm/wasm-example/src/: lib.rs
modular-wasm/wasm-module-core/: Cargo.toml
modular-wasm/wasm-module-core/src/: fn_mappings.rs  lib.rs
modular/src/: lib.rs  modular.rs
