[workspace]
members = [
    "modular",
    "modular-core",
    "modular-dll",
    "modular-wasm",
    "modular-wasm/wasm-example",
    "example",
    "example/module1",
    "example/module2",
    "modular-wasm/wasm-module-core",
    "modular-tracing/protobuf-tracing",
    "modular-tracing/modular-tracing-core"
]