[package]
name = "modular-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"
semver = "1"
tokio = { version = "1", features = [ "full" ] }
bytes = "1"
parking_lot = { version = "0.12", features = [ "arc_lock", "send_guard" ] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.modular-native]
path = "../modular-native"

[lib]
crate-type = [ "rlib", "cdylib" ]