[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"

[dependencies.modular]
path = "../modular"

[dependencies.modular-dll]
path = "../modular-dll"

[dependencies.modular-wasm]
path = "../modular-wasm"

[dependencies.modular-tracing-core]
path = "../modular-tracing/modular-tracing-core"