[package]
name = "modular-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
anyhow = { version = "1" }
uuid = { version = "1", features = ["v4"] }
wasmer = { version = "3.0.0-beta", features = [  ] }
wasmer-types = "3.0.0-beta"
wasmer-wasi = "3.0.0-beta"
parking_lot = "0.12"

[dependencies.modular-core]
path = "../modular-core"