[package]
name = "module1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"

[dependencies.modular-core]
path = "../../modular-core"

[dependencies.native-recorder]
path = "../../modular-tracing/native-recorder"

[lib]
crate-type = [ "cdylib" ]